# roboticArm

guiControl/: CMakeLists.txt  Main.qml  main.cpp  parameter.cpp  parameter.h  tcpserver.cpp  tcpserver.h  udp_client.cpp  udp_client.h
python/: main.py
roboticArmEsp32/roboticArm/: CMakeLists.txt  sdkconfig  sdkconfig.old
roboticArmEsp32/roboticArm/main/: CMakeLists.txt  led_control.c  led_control.h  main.c  servo_control.c  servo_control.h  structData.h  tcp_client.c  tcp_client.h  udp_server.c  udp_server.h  wifi_connect.c  wifi_connect.h
